--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,6 @@
 			<version>4.11.0</version>
 		</dependency>
 
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
-		</dependency>
-
 		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
 		<dependency>
 			<groupId>org.testng</groupId>
@@ -55,13 +49,6 @@
 			<artifactId>log4j-api</artifactId>
 			<version>2.20.0</version>
 		</dependency>
-		<!--
-		<dependency>
-			<groupId>Neha</groupId>
-			<artifactId>Selenium-Java</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		-->
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
@@ -93,6 +80,7 @@
 			</plugin>
 		</plugins>
 	</build>
+	<!--
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -101,5 +89,5 @@
 				<version>4.13.2</version>
 			</dependency>
 		</dependencies>
-	</dependencyManagement>
+	</dependencyManagement>-->
 </project>
